--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,8 @@ jobs:
       - save_cache:
           paths:
             - ~/.m2
+            - ~/.ivy2
+            - ~/.coursier/cache
           key: v1-dependencies--{{ checksum "build.sbt" }}
 
       # run tests!
